crates/next-code-frame/src/snapshots/next_code_frame__tests__simple_single_line_error.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result
---
> 1 | console.log('hello')
    | ^
