crates/next-code-frame/src/snapshots/next_code_frame__tests__three_chars.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result2
---
> 1 | const x = 123;
    |           ^^^
