crates/next-code-frame/src/snapshots/next_code_frame__tests__with_message.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result
---
> 1 | const x = 1
    |       ^ Expected semicolon
